[package]
name = "ad_scan"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = "z"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
serde_yaml = "0.9.30"
serde = { version = "1.0.195", features = ["derive"] }
walkdir = "2.3"